[tool.poetry]
name = "dependabot-poetry-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dependabot_poetry_demo"}]

[tool.poetry.dependencies]
python = "3.9.*"
requests = "2.28.*"

[tool.poetry.group.dev.dependencies]
pytest = "6.*"


[tool.poetry.group.foo.dependencies]
numpy = "1.22.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
